--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,3 +1,20 @@
+/* SPA Placeholder Styles */
+.placeholder-content {
+  background: #fff;
+  color: #000;
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.placeholder-content h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  color: #333;
+}
+
 /* Studio44 Stats & CTA Section */
 .studio44-stats-section {
   padding: 0;
