portfolio, about and workflow

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <a href="#" class="nav-link" onclick="showSection('workflow')">Workflow</a>
             </nav>
             <div class="header-contact">
-                <span>studio44v@gmail.com</span>
+                <a href="mailto:studio44v@gmail.com">studio44v@gmail.com</a>
             </div>
         </div>
     </header>
@@ -35,7 +35,7 @@
             <div class="footer-contact">
                 <h2>Get in Touch with Us</h2>
                 <div class="footer-phone">+91 97370 44144</div>
-                <div class="footer-email">studio44v@gmail.com</div>
+                <div class="footer-email"><a href="mailto:studio44v@gmail.com">studio44v@gmail.com</a></div>
             </div>
             <nav class="footer-nav">
                 <a href="#" class="footer-link" onclick="showSection('home')">HOME</a>
